force-app/main/01_languageEssentials/templateExpressions/objects/ASR_Shopping_Cart__c/ASR_Shopping_Cart__c.object-meta.xml
<CustomObject>
    <description>Shopping Cart for Template Expressions Demo</description>
    <label>Shopping Cart</label>
    <nameField>
        <displayFormat>CART-{0000}</displayFormat>
        <label>Shopping Cart Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Shopping Carts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>