force-app/main/01_languageEssentials/templateExpressions/objects/ASR_Shopping_Cart__c/fields/Customer_Name__c.field-meta.xml
<CustomField>
    <fullName>Customer_Name__c</fullName>
    <description>Name of the customer</description>
    <label>Customer Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>