force-app/main/01_languageEssentials/templateExpressions/objects/ASR_Shopping_Cart__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Customer_Name__c</columns>
    <columns>Status__c</columns>
    <columns>Total_Amount__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>